[gd_scene load_steps=17 format=3 uid="uid://40mtfiq51p3d"]

[ext_resource type="PackedScene" uid="uid://bjp7lcojflgop" path="res://scenes/bubble.tscn" id="1_83uus"]
[ext_resource type="Script" path="res://scripts/level.gd" id="1_hl4t3"]
[ext_resource type="PackedScene" uid="uid://cb47nxe3bwv83" path="res://scenes/player.tscn" id="2_w7c3h"]
[ext_resource type="Texture2D" uid="uid://b8gukqdws0dic" path="res://textures/cursor.png" id="3_fmf4g"]
[ext_resource type="Script" path="res://scripts/cursor.gd" id="4_mx8sn"]
[ext_resource type="PackedScene" uid="uid://dumiogewe3lma" path="res://scenes/background.tscn" id="5_aievo"]
[ext_resource type="PackedScene" uid="uid://dseix45i1xgtx" path="res://scenes/map.tscn" id="5_tljte"]
[ext_resource type="Texture2D" uid="uid://n2puvvyp4l2v" path="res://textures/height_bar.png" id="7_akayg"]
[ext_resource type="Texture2D" uid="uid://cgaoihbubudpn" path="res://textures/mari_arrow.png" id="8_aa6sx"]
[ext_resource type="Texture2D" uid="uid://rltmn31tcea4" path="res://textures/barometer.png" id="8_ufp8b"]
[ext_resource type="Texture2D" uid="uid://bf1b3uvrh0wqn" path="res://textures/barometer_arrow.png" id="9_7woni"]
[ext_resource type="Texture2D" uid="uid://ddju8h4t68s1q" path="res://textures/caca_arrow.png" id="10_pd17x"]
[ext_resource type="AudioStream" uid="uid://chong7v1ohn25" path="res://sound/action_full.wav" id="11_nfnki"]
[ext_resource type="AudioStream" uid="uid://bd1m05x6x03um" path="res://sound/crumbling_2.wav" id="14_p8h00"]

[sub_resource type="QuadMesh" id="QuadMesh_ri7t0"]
size = Vector2(1280, 720)

[sub_resource type="Environment" id="Environment_mx8sn"]
background_mode = 3
background_energy_multiplier = 0.0
glow_enabled = true
glow_intensity = 8.0
glow_hdr_threshold = 0.1
glow_hdr_scale = 4.0
glow_hdr_luminance_cap = 256.0
fog_mode = 1
fog_light_color = Color(1, 0.0384708, 0.407676, 1)
fog_light_energy = 14.2
fog_sun_scatter = 2.96
fog_density = 0.972
fog_sky_affect = 0.222
fog_height = -1024.0
fog_height_density = 1.8042
volumetric_fog_density = 0.4675
volumetric_fog_emission_energy = 1024.0

[node name="Level" type="Node2D"]
script = ExtResource("1_hl4t3")

[node name="Background" parent="." instance=ExtResource("5_aievo")]
z_index = -4096

[node name="PlayerBubble" parent="." instance=ExtResource("1_83uus")]
unique_name_in_owner = true
position = Vector2(640, 528)

[node name="Player" parent="PlayerBubble" instance=ExtResource("2_w7c3h")]
unique_name_in_owner = true
z_index = -1
position = Vector2(0, -8)
collision_layer = 0

[node name="Pellets" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Map" parent="." instance=ExtResource("5_tljte")]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Cursor" type="Sprite2D" parent="CanvasLayer"]
unique_name_in_owner = true
position = Vector2(-97, -81)
texture = ExtResource("3_fmf4g")
script = ExtResource("4_mx8sn")

[node name="Barometer" type="Sprite2D" parent="CanvasLayer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.803922)
position = Vector2(72, 648)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_ufp8b")

[node name="Arrow" type="Sprite2D" parent="CanvasLayer/Barometer"]
position = Vector2(0, -4.76837e-07)
rotation = -2.46091
texture = ExtResource("9_7woni")
offset = Vector2(0.5, -4.5)

[node name="HeightBar" type="Node2D" parent="CanvasLayer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)

[node name="Bar" type="Sprite2D" parent="CanvasLayer/HeightBar"]
position = Vector2(1240, 360)
scale = Vector2(-1, 0.95)
texture = ExtResource("7_akayg")

[node name="Mari" type="Sprite2D" parent="CanvasLayer/HeightBar"]
position = Vector2(1192, 32)
texture = ExtResource("8_aa6sx")

[node name="Caca" type="Sprite2D" parent="CanvasLayer/HeightBar"]
position = Vector2(1192, 32)
texture = ExtResource("10_pd17x")

[node name="FillColor" type="MeshInstance2D" parent="CanvasLayer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
z_index = 4096
position = Vector2(640, 360)
mesh = SubResource("QuadMesh_ri7t0")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
unique_name_in_owner = true
environment = SubResource("Environment_mx8sn")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_nfnki")
volume_db = -13.117

[node name="Crumbling" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_p8h00")
